# silence-split-app

./: Makefile  README.md  pyproject.toml
src/: app.py
